--- a/blogpost.html
+++ b/blogpost.html
@@ -7,8 +7,8 @@
 
 <body>
     <div id="container">
-        <div id="cabecera">
-            Cabecera
+        <div id="Cabecera">
+            AQUI INICIA LA CABECERA
         </div>
         <div id="post">
             <h1>Este es el título atractivo e interesante del post</h1>
